--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="banner_ad_unit_id_big">ca-app-pub-1943700858932247/6248330570</string>
     <string name="follow_us_twitter">https://twitter.com/RomeRock_Apps</string>
     <string name="follow_us_twitter_profile">twitter://user?screen_name=RomeRock_Apps</string>
-    <string name="facebook_app_id">2186593201575723</string>
+    <string name="facebook_app_id">2292294817451565</string>
     <string name="follow_us_instagram">https://www.instagram.com/romerock_apps/</string>
     <string name="link_tipCalculator">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.tipcalculator&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app</string>
     <string name="link_xpressVote">https://play.google.com/store/apps/details?id=com.romerock.apps.utilities.xpressvote&#38;utm_source=cryptocurrencyconverter&#38;utm_medium=share&#38;utm_campaign=app </string>
@@ -64,7 +64,7 @@
     <string name="share_facebook">Share on Facebook</string>
     <string name="share_twitter">Share on Twitter</string>
     <string name="pop_up_share_tittle">Share with the World \n  and get rewarded</string>
-    <string name="pop_up_share_content">Do you like Currency Conveter?\nShare our app on Facebook or Twitter an get\nthe Daylight Theme  totally FREE!</string>
+    <string name="pop_up_share_content">Do you like Crypto Currency Conveter?\nShare our app on Facebook or Twitter !!</string>
     <string name="send">Send</string>
     <string name="pop_up_get_feedback_content_mail">Leave a comment</string>
     <string name="pop_up_feedback_tittle">Do you have any suggestion?\nWe are here for you :)</string>
@@ -104,8 +104,8 @@
     <string name="settings_preview_pro_version">PRO VERSION</string>
     <string name="share_link">http://goo.gl/BnFmGC</string>
     <string name="shareAndRewarded">shareAndRewardedPreferences</string>
-    <string name="share_via_twitter">I\'m using #Currency  #Converter. Download for #FREE #Android</string>
-    <string name="share_success">Thank you for sharing, the daylight theme is now available</string>
+    <string name="share_via_twitter">I\'m using #Cypto #Currency  #Converter. Download for #FREE #Android</string>
+    <string name="share_success">Thank you for sharing</string>
     <string name="preferences_isInvalidate">preferences_isInvalidate</string>
     <string name="quickConverter">Quick Unit Converter</string>
     <string name="preferences_check_inventory">preferencesCheckInventory</string>
