--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Calculateur de Monnaie</string>
+    <string name="app_name">Convertisseur de Cryptomonnaie et Devise</string>
     <string name="banner_ad_unit_id">ca-app-pub-1943700858932247/4609978137</string>
     <string name="interstitial_ad_unit_id">ca-app-pub-1943700858932247/4683373591</string>
     <string name="banner_ad_unit_id_big">ca-app-pub-1943700858932247/6248330570</string>
