--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,7 +77,7 @@
     <string name="unlimited_price">Unlimited Price Triggers\nNotifications</string>
     <string name="remove_annoying_ads">Remove annoying Ads</string>
     <string name="unlock_daylight_theme">Unlock Daylight Theme</string>
-    <string name="go_premium">GO PREMIUM: \nNOTIFICATIONS, ALERTS,\nREMOVE ADS &amp; THEMES</string>
+    <string name="go_premium">GO PREMIUM: \nNOTIFICATIONS, ALERTS,\nREMOVE ADS</string>
     <string name="notification_center">Notification Center</string>
     <string name="setup_push_notification">Setup Push Notifications</string>
     <string name="vs">VS</string>
@@ -102,7 +102,7 @@
     <string name="settings_option_select_scheme_color">Select scheme color</string>
     <string name="settings_preview">PREVIEW</string>
     <string name="settings_preview_pro_version">PRO VERSION</string>
-    <string name="share_link">http://goo.gl/BnFmGC</string>
+    <string name="share_link">https://goo.gl/EBkFAh</string>
     <string name="shareAndRewarded">shareAndRewardedPreferences</string>
     <string name="share_via_twitter">I\'m using #Cypto #Currency  #Converter. Download for #FREE #Android</string>
     <string name="share_success">Thank you for sharing</string>
