chane reference for main '/'

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -130,4 +130,5 @@
     <string name="pay_as_much_you_want">* Paga todo lo que quieras por la versión premium.\n* Somos una empresa pequeña y sólo sobrevivimos gracias a tú apoyo.</string>
     <string name="preferences_count_keys">preferences_count_keys</string>
     <string name="preferences_defaultCurrencies_first_time">preferences_defaultCurrencies_first_time</string>
+    <string name="preferences_interstitial_count">preferences_interstitial_count</string>
 </resources>
