--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -130,4 +130,6 @@
     <string name="preferences_count_keys">preferences_count_keys</string>
     <string name="preferences_defaultCurrencies_first_time">preferences_defaultCurrencies_first_time</string>
     <string name="preferences_interstitial_count">preferences_interstitial_count</string>
+    <string name="donate_us">Donate us</string>
+    <string name="this_feature_is_blocked">This feature is blocked :(, if you support our team with some love, we will enable this and other functions, and we will remove those annoying ads</string>
 </resources>
